--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                                 <label class="form-check-label" for="flexCheckDefault">
-                                    By checking this box I agree to be contacted by Regimental Recruiting.
+                                    By checking this box I agree to be contacted by the Ranger Regiment Recruiting Team.
                                 </label>
                             </div>
                             <button type="button" class="btn btn-outline-secondary">Submit</button>
