--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-md-4 p-0">
                         <div class="info-card">
                             Army Rangers are America's elite direct action raid force. Rangers are a rapid deployment
-                            capable small unit, able to deployed anywhere in the world in less than 18 hours. Mission
+                            capable small unit. Able to deployed anywhere in the world in less than 18 hours mission
                             ready
                             upon arrival. Ranger regiments operate on a rotation system with each other.
                         </div>
