--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="Title">
         <h1 class="mb-0 p-0"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="24" fill="currentColor"
-                class="bi bi-lightning-charge-fill" viewBox="0 0 16 24">
+                class="bi bi-lightning-charge-fill me-2" viewBox="0 0 16 24">
                 <path
                     d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z" />
             </svg>U.S. Army Rangers</h1>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <h1 class="hero-text">Army Rangers work 95% of the time at night. While you sleep, they are
+                    <h1 class="hero-text mt-4">Army Rangers work 95% of the time at night. While you sleep, they are
                         taking
                         the fight to the enemy. </h1>
                 </div>
@@ -111,16 +111,59 @@
                                     <path
                                         d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z" />
                                 </svg> Ranger Training</h2>
-                            <p>Rangers go through months of rigorous training. The training a ranger goes through
-                                varies,
-                                however every ranger must go through the Ranger Assessment & Selection Program as well
+                            <p> - Rangers go through months of rigorous training. The training a ranger goes through
+                                varies for every candidate.
+                                However every ranger must go through the Ranger Assessment & Selection Program as well
                                 as
                                 Ranger School.</p>
-                            <p>Ranger Assessment & Selection is 8 weeks long and tests every Ranger Candidate mentally,
+                            <p> - Ranger Assessment & Selection is 8 weeks long and tests every Ranger Candidate
+                                mentally,
                                 physically, and emotionally. RASP for short, is grueling with less than 20% of the
                                 candidates being selected for life in Ranger Regiment.
                             </p>
+                            <p>Ranger School is a 62 day course designed to test the mental, physical, and emotional
+                                state of each participant. Throughout the grueling 62 days ranger classes lose over 85%
+                                of their starting numbers.
+                                <button type="button" class="btn btn-secondary">More</button>
+                            </p>
 
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="ranger-card">
+                            <div class="card-body">
+                                A ranger is a person who knows what their mind, body, and emotions are capable of. The
+                                intestinal fortitude to arrive on the objective, no matter what that objective is, ready
+                                to
+                                fight. Willing to lay down their own life so others can live. Being physically fit is
+                                only a
+                                fraction of what embodies a ranger within regiment.
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="regiment-card">
+                            <div class="card-body">Ranger Battalion is a very rewarding and coveted unit to belong to.
+                                Regiment is a family.
+                                The brothers you serve with will always be by your side, they will always be there for
+                                you when you need them.</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="rules-card">
+                            <div class="card-body">Life in regiment is ran by a group of rules that allow you to remain
+                                within regiment.
+                                Waive from the rules and you will be sent to the Conventional Army. Adhering to the
+                                insanely high rules in regiment is expected of every person their regardless of rank.
+                            </div>
                         </div>
                     </div>
                 </div>
