--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row bg-secondary">
                     <div class="col-md-4">
                         <div class="ranger-card">
                             <div class="card-body">
@@ -147,8 +147,6 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-md-4">
                         <div class="regiment-card">
                             <div class="card-body">Ranger Battalion is a very rewarding and coveted unit to belong to.
@@ -159,7 +157,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="rules-card">
-                            <div class="card-body">Life in regiment is ran by a group of rules that allow you to remain
+                            <div class="card-body">Life in regiment is ran by a set of rules that allow you to remain
                                 within regiment.
                                 Waive from the rules and you will be sent to the Conventional Army. Adhering to the
                                 insanely high rules in regiment is expected of every person their regardless of rank.
