Saturday Night draft

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="container-fluid">
                 <div class="row bg-dark">
-                    <div class="col-md-4">
+                    <div class="col-md-4 cards">
                         <div class="card border-success mt-3 mb-3" style="max-width: 18rem;">
                             <div class="card-header"></div>
                             <div class="card-body text-success">
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 cards">
                         <div class="card border-success mt-3 mb-3" style="max-width: 18rem;">
                             <div class="card-header"></div>
                             <div class="card-body text-success">
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 cards">
                         <div class="card border-success mt-3 mb-3" style="max-width: 18rem;">
                             <div class="card-header"></div>
                             <div class="card-body text-success">
@@ -178,6 +178,14 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row bg-dark quote">
+                    <div class="col-12 text-center">
+                        <h3>Ranger Motto</h3>
+                        <p> “It is not death that a man should fear, but he should fear never beginning to live.”</p>
                     </div>
                 </div>
             </div>
