--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
 </style>
 
-<body class="debug">
+<body>
     <div class="sticky-top">
         <header class="Title container-fluid">
             <h1 class="mb-0 p-0"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="24" fill="currentColor"
