--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             physically, and emotionally. RASP for short, is grueling with less than 20% of the
                             candidates being selected for life in Ranger Regiment.
                         </p>
-                        <p>Ranger School is a 62 day course designed to test the mental, physical, and emotional
+                        <p> - Ranger School is a 62 day course designed to test the mental, physical, and emotional
                             state of each participant. Throughout the grueling 62 days ranger classes lose over 85%
                             of their starting numbers.
                             <button type="button" class="btn btn-secondary">More</button>
@@ -214,9 +214,10 @@
                 </div>
             </div>
         </div>
-
-
     </main>
+    <footer class="RLTW">
+        <h1 class="leader text-center">"Not For the weak or faint-hearted"</h1>
+    </footer>
 
 
 
