--- a/index.html
+++ b/index.html
@@ -217,32 +217,8 @@
     </main>
     <footer class="RLTW">
         <h1 class="leader text-center">"Not For the weak or faint-hearted"</h1>
+        <h3 class="life text-center">Rangers Lead The Way!</h3>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
